--- a/rancher-demo/cowsay.yml
+++ b/rancher-demo/cowsay.yml
@@ -1,19 +1,23 @@
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: cowsay
-#   namespace: default
-# spec:
-#   selector:
-#     matchLabels:
-#       workload.user.cattle.io/workloadselector: apps.deployment-default-cowsay
-#   strategy:
-#     rollingUpdate:
-#       maxSurge: 25%
-#       maxUnavailable: 25%
-#     type: RollingUpdate
-#   template:
-#     metadata:
-#       labels:
-#         app: cowdemo
-#         workload.user.cattle.io/workloadselector: apps.deployment-default-cowsay
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: cowsay
+  # labels:
+  #   app: cowsay
+spec:
+  selector:
+    matchLabels:
+      app: cowsay
+  replicas: 5
+  strategy:
+    type: RollingUpdate
+  template:
+    # metadata:
+    #   labels:
+    #     app: web
+    spec:
+      containers:
+       —name: cowsay-demo
+          image: bgulla/rancher-demo
+          ports:
+           —containerPort: 8080
