--- a/cowsay.yaml
+++ b/cowsay.yaml
@@ -1,23 +1,23 @@
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: cowsay
-#   # labels:
-#   #   app: cowsay
-# spec:
-#   selector:
-#     matchLabels:
-#       app: cowsay
-#   replicas: 5
-#   strategy:
-#     type: RollingUpdate
-#   template:
-#     # metadata:
-#     #   labels:
-#     #     app: web
-#     spec:
-#       containers:
-#        —name: cowsay-demo
-#           image: "bgulla/rancher-demo"
-#           ports:
-#            —containerPort: 8080
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: cowsay
+  # labels:
+  #   app: cowsay
+spec:
+  selector:
+    matchLabels:
+      app: cowsay
+  replicas: 5
+  strategy:
+    type: RollingUpdate
+  template:
+    # metadata:
+    #   labels:
+    #     app: web
+    spec:
+      containers:
+       —name: cowsay-demo
+          image: "bgulla/rancher-demo"
+          ports:
+           —containerPort: 8080
