--- a/cowsay.yaml
+++ b/cowsay.yaml
@@ -17,7 +17,7 @@ spec:
     #     app: web
     spec:
       containers:
-      — name: cowsay-demo
-        image: "bgulla/rancher-demo"
+      — name: cowsaydemo
+        image: bgulla/rancher-demo
         ports:
           — containerPort: 8080
