--- a/cowsay.yaml
+++ b/cowsay.yaml
@@ -1,23 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cowsay
-  # labels:
-  #   app: cowsay
+  name: nginx-deployment
+  labels:
+    app: nginx
 spec:
+  replicas: 3
   selector:
     matchLabels:
-      app: cowsay
-  replicas: 5
-  strategy:
-    type: RollingUpdate
+      app: nginx
   template:
-    # metadata:
-    #   labels:
-    #     app: web
+    metadata:
+      labels:
+        app: nginx
     spec:
       containers:
-      — name: cowsaydemo
-        image: bgulla/rancher-demo
+      - name: nginx
+        image: nginx:1.14.2
         ports:
-        — containerPort: 8080
+        - containerPort: 80
