--- a/cowsay.yaml
+++ b/cowsay.yaml
@@ -20,3 +20,38 @@ spec:
         image: bgulla/rancher-demo
         ports:
         - containerPort: 8080
+
+
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: cowsay
+  namespace: demo
+spec:
+  selector:
+    app: cowdemo
+  ports:
+  - protocol: TCP
+    port: 8080
+    targetPort: 8080
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: cowsay
+  namespace: demo
+spec:
+  rules:
+  - host: cow.rfed.demo.rancher.lol
+    http:
+      paths:
+      - backend:
+          service:
+            name: cowsay
+            port:
+              number: 8080
+        path: /
+        pathType: Prefix
