--- a/cowsay.yaml
+++ b/cowsay.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cowsay
-  namespace: demo
+  namespace: default
   labels:
     app: demo
 spec:
@@ -28,7 +28,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cowsay
-  namespace: demo
+  namespace: default
 spec:
   selector:
     app: demo
