--- a/cowsay.yaml
+++ b/cowsay.yaml
@@ -70,7 +70,7 @@ metadata:
   labels:
     app: redis
 spec:
-  storageClassName: "longhorn-crypto-per-volume"
+  storageClassName: "longhorn-crypto-global"
   accessModes:
   - ReadWriteMany
   resources:
