--- a/cowsay.yaml
+++ b/cowsay.yaml
@@ -19,7 +19,7 @@ spec:
       - env:
         - name: test
           value: test
-      - name: demo
+        name: demo
         image: bgulla/rancher-demo
         ports:
         - containerPort: 8080
