--- a/cowsay.yaml
+++ b/cowsay.yaml
@@ -15,39 +15,14 @@ spec:
       labels:
         app: demo
     spec:
+    - name: demo
       containers:
       - env:
         - name: COW_COLOR
           value: pink
-        name: demo
         image: bgulla/rancher-demo
         ports:
         - containerPort: 8080
-        volumeMounts:
-        - name: redis-data
-          mountPath: /data
-          subPath:
-      volumes:
-      - name: redis-data
-        persistentVolumeClaim:
-          claimName: redis
-
-
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: redis
-  labels:
-    app: redis
-spec:
-  storageClassName: "longhorn-crypto-global"
-  accessModes:
-  - ReadWriteMany
-  resources:
-    requests:
-      storage: 250Mi
-
 
 
 
