--- a/cowsay.yaml
+++ b/cowsay.yaml
@@ -15,11 +15,11 @@ spec:
       labels:
         app: demo
     spec:
-    - name: demo
       containers:
       - env:
         - name: COW_COLOR
           value: pink
+        name: demo
         image: bgulla/rancher-demo
         ports:
         - containerPort: 8080
@@ -62,5 +62,4 @@ spec:
   - hosts:
     - cow.rfed.demo.rancher.lol
     secretName: cow-ingress
-
 
