--- a/nginx.yaml
+++ b/nginx.yaml
@@ -13,7 +13,7 @@ spec:
   template:
     metadata:
       labels:
-        app: demo
+        app: nginx
     spec:
       containers:
       - name: nginx
