--- a/nginx.yaml
+++ b/nginx.yaml
@@ -22,7 +22,7 @@ spec:
         - containerPort: 80
         volumeMounts:
         - name: redis-data
-          mountPath: /data
+          mountPath: /tmp
       volumes:
       - name: redis-data
         persistentVolumeClaim:
