--- a/cowsay.yaml
+++ b/cowsay.yaml
@@ -60,6 +60,6 @@ spec:
         pathType: Prefix
   tls:
   - hosts:
-    - cow.rfed.demo.rancher.lol
+    - cow.aws.rancher.lol
     secretName: cow-ingress
 
