--- a/certmanager/cert-manager/fleet.yaml
+++ b/certmanager/cert-manager/fleet.yaml
@@ -5,7 +5,8 @@ helm:
   chart: cert-manager
   version: 1.9.1
   releaseName: cert-manager
-  extra_args: -dns01-recursive-nameservers-only,--dns01-recursive-nameservers=8.8.8.8:53\,1.1.1.1:53
+  values:
+  extraArgs: {--dns01-recursive-nameservers-only: '', '--dns01-recursive-nameservers=8.8.8.8:53\': '', '1.1.1.1:53': ''}
 
 dependsOn:
 - name: cert-add-certmanager-crds
