--- a/certmanager/cert-manager/fleet.yaml
+++ b/certmanager/cert-manager/fleet.yaml
@@ -6,7 +6,9 @@ helm:
   version: 1.9.1
   releaseName: cert-manager
   values:
-  extraArgs: {--dns01-recursive-nameservers-only: '', '--dns01-recursive-nameservers=8.8.8.8:53\': '', '1.1.1.1:53': ''}
+    extraArgs:
+      - "--dns01-recursive-nameservers-only"
+      - "--dns01-recursive-nameservers=8.8.8.8,1.1.1.1:53"
 
 dependsOn:
 - name: cert-add-certmanager-crds
